[tool.poetry]
name = "yupi"
version = "0.12.2"
description = "A package for tracking and analysing objects trajectories"
authors = [
    "Gustavo Viera-López <gvieralopez@gmail.com>",
    "Alfredo Reyes <areyes@fisica.uh.cu>",
    "Jorge Morgado <jorge.morgadov@gmail.com>",
    "Ernesto Altshuler <ealtshuler@fisica.uh.cu>"
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yupidevs/yupi"
documentation = "https://yupi.readthedocs.io"
keywords = ["trajectory", "analysis", "tracking"]

[tool.poetry.dependencies]
python = "^3.7"
opencv-python = ">=4.4.0"
numpy = ">=1.16.5"
nudged = ">=0.3.1"
matplotlib = ">=3.2.0"

[tool.poetry.dev-dependencies]
pytest = ">=6.2.2"
pylint = ">=2.7.2"
isort = ">=5.10.1"
black = ">=22.3.0"

[tool.isort]
profile = "black"
known_first_party = ["yupi"]

[tool.black]
target-version = ["py37"]

[tool.pylint."MESSAGES CONTROL"]
extension-pkg-whitelist = ["cv2"]
max-line-length = 88
good-names = [
	"x",   # Data from x axis
	"y",   # Data from y axis
	"z",   # Data from z axis
	"t",   # Time vector
	"r",   # Position vector
	"v",   # Velocity vector
	"a",   # Acceleration vector
	"dt",  # Time spacing (delta time)
	"i",   # Usual iteration variable
	"j",   # Usual iteration variable
	"k",   # Usual iteration variable
	"ax",  # Matplotlib Axes
	"T",   # Total time
	"N"    # Number of trajectories
]

[tool.bumpver]
current_version = "0.12.2"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit = false
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"yupi/__init__.py" = ['__version__ = "{version}"']
"docs/source/conf.py" = ['release = "{version}"']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
